parser/src/tests/corpus/negatives/open-square-bracket/expected
Error from "negatives/open-square-bracket/input", line 1:
| [
|  ^
|
+-> Syntax error: while parsing list-expression, unexpected end of input while expecting ' ', '!', '$', '(', '[', '\n', ']', 'f', 'l', 'q', or '{'
